# liboctopus

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  json-config.json
nonstd/: optional_ptr.hpp  serialize_float.hpp
octopus/: effect.h  fill.h  filter.h  fix-octopus.cpp  fix-octopus.h  general.h  layer-change.h  layer.h  octopus.h  override.h  parser.cpp  parser.h  serializer.cpp  serializer.h  shape.h  stroke.h  text.h  validator.cpp  validator.h
octopus-manifest/: artifact.h  asset.h  chunk.h  component.h  general.h  library.h  octopus-manifest.h  page.h  parser.cpp  parser.h  resource.h  serializer.cpp  serializer.h  status.h
